--- a/environment.yml
+++ b/environment.yml
@@ -10,11 +10,13 @@ dependencies:
   - anyio=3.3.0=py38h578d9bd_0
   - argon2-cffi=20.1.0=py38h497a2fe_2
   - async_generator=1.10=py_0
+  - attrs=21.4.0=pyhd8ed1ab_0
   - babel=2.9.1=pyh44b312d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd8ed1ab_0
   - brotli=1.0.9=h7f98852_5
   - brotli-bin=1.0.9=h7f98852_5
   - brotlipy=0.7.0=py38h497a2fe_1001
@@ -32,6 +34,7 @@ dependencies:
   - debugpy=1.4.1=py38h709712a_0
   - decorator=5.0.9=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
   - expat=2.4.1=h9c3ff4c_0
   - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.13.1=hba837de_1005
@@ -45,14 +48,19 @@ dependencies:
   - icu=58.2=hf484d3e_1000
   - idna=3.1=pyhd3deb0d_0
   - importlib-metadata=4.6.4=py38h578d9bd_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
   - intel-openmp=2021.3.0=h06a4308_3350
   - ipykernel=6.2.0=py38he5a9106_0
   - ipython=7.26.0=py38he5a9106_0
+  - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.6.3=pyhd3deb0d_0
   - jedi=0.18.0=py38h578d9bd_2
+  - jinja2=3.0.3=pyhd8ed1ab_0
   - joblib=1.0.1=pyhd8ed1ab_0
   - jpeg=9b=h024ee3a_2
   - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py38h578d9bd_0
   - jupyter_server=1.10.2=pyhd8ed1ab_0
   - jupyterlab=3.1.8=pyhd8ed1ab_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
@@ -111,7 +119,9 @@ dependencies:
   - openh264=2.1.0=hd408876_0
   - openjpeg=2.3.0=h05c96fa_1
   - openssl=1.1.1k=h7f98852_0
+  - packaging=21.3=pyhd8ed1ab_0
   - pandoc=2.14.1=h7f98852_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.2=pyhd8ed1ab_0
   - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyh9f0ad1d_2
@@ -123,7 +133,9 @@ dependencies:
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.11.2=pyhd8ed1ab_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyqt=5.9.2=py38h05f1152_4
   - pysocks=1.7.1=py38h578d9bd_3
   - python=3.8.11=h12debd9_0_cpython
@@ -150,9 +162,11 @@ dependencies:
   - torchvision=0.10.0=py38_cu111
   - tornado=6.1=py38h497a2fe_1
   - tqdm=4.62.2=pyhd8ed1ab_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=3.10.0.0=pyh06a4308_0
   - urllib3=1.26.6=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
   - websocket-client=0.57.0=py38h578d9bd_4
   - wheel=0.37.0=pyhd3eb1b0_0
   - widgetsnbextension=3.5.1=py38h578d9bd_4
@@ -160,33 +174,37 @@ dependencies:
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h7b6447c_0
   - zeromq=4.3.4=h9c3ff4c_0
+  - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
   - pip:
-    - attrs==21.4.0
-    - bleach==4.1.0
-    - entrypoints==0.4
-    - importlib-resources==5.4.0
-    - ipython-genutils==0.2.0
-    - jinja2==3.0.3
-    - jsonschema==4.4.0
+    - antlr4-python3-runtime==4.8
+    - click==8.0.4
+    - docker-pycreds==0.4.0
+    - gitdb==4.0.9
+    - gitpython==3.1.27
+    - hydra-core==1.1.1
     - jupyter-client==7.0.1
     - jupyter-contrib-core==0.3.3
     - jupyter-contrib-nbextensions==0.5.1
-    - jupyter-core==4.9.2
     - jupyter-highlight-selected-word==0.2.0
     - jupyter-latex-envs==1.4.6
     - jupyter-nbextensions-configurator==0.4.1
     - lxml==4.7.1
     - nbconvert==5.6.1
-    - packaging==21.3
-    - pandocfilters==1.5.0
-    - pygments==2.11.2
-    - pyparsing==3.0.7
+    - omegaconf==2.1.1
+    - pathtools==0.1.2
+    - promise==2.3
+    - protobuf==3.19.4
+    - psutil==5.9.0
     - pyrsistent==0.18.1
     - pyyaml==6.0
     - scipy==1.7.1
+    - sentry-sdk==1.5.6
+    - setproctitle==1.2.2
+    - shortuuid==1.0.8
+    - smmap==5.0.0
+    - termcolor==1.1.0
     - torchdiffeq==0.2.2
-    - traitlets==5.1.1
-    - webencodings==0.5.1
-    - zipp==3.7.0
+    - wandb==0.12.11
+    - yaspin==2.1.0
