--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,11 +6,15 @@ h_dim: 64
 e_dim: 64
 z1_dim: 64
 z2_dim: 64
+n_layers: 3
 
 # training
 gpu: True
-n_points_per_cloud: 128
-bsz: 1024
+n_points_per_cloud: 512
+bsz: 2048
 lr: 1e-4
 n_epochs: 10000
-val_frequency: 5
+
+# evaluation
+eval_frequency: 5
+n_samples: 10
