--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,23 +2,25 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h1_dim: 16
-h2_dim: 2
-e_dim: 16
-ze_dim: 2
+h1_dim: 32
+h2_dim: 32
+e_dim: 32
+ze_dim: 32
 z1_dim: 2
 z2_dim: 2
-hid_dim: 64
-n_layers: 2
+hid_dim: 128
+n_layers: 3
 activation: silu
 
 # training
 gpu: True
-n_points_per_cloud: 256
-bsz: 4096
+n_points_per_cloud: 128
+bsz: 2048
 lr: 1e-4
-n_epochs: 1000
+n_epochs: 3001
 
 # evaluation
-eval_frequency: 50
-n_samples: 2
+save_dir: /pio/scratch/1/mstyp/joint-clouds/results
+eval_frequency: 100
+n_samples: 5
+n_points_per_cloud_gen: 1024
