--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,16 +8,18 @@ e_dim: 32
 ze_dim: 32
 z1_dim: 2
 z2_dim: 2
-hid_dim: 128
+hid_dim: 256
 n_layers: 3
 activation: silu
 
 # training
 gpu: True
-n_points_per_cloud: 128
-bsz: 2048
-lr: 1e-4
-n_epochs: 3001
+n_gpus: 2
+n_points_per_cloud: 256
+bsz: 4096
+lr: 1e-3
+n_epochs: 10000
+n_warmup_epochs: 30
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results
