--- a/configs/config5.yaml
+++ b/configs/config5.yaml
@@ -9,17 +9,22 @@ ze_dim: 16
 z1_dim: 2
 z2_dim: 2
 r1_dim: 2
-hid_dim: 256
-n_layers: 3
+encoder_hid_dim: 128
+decoder_hid_dim: 512
+encoder_n_layers: 3
+decoder_n_layers: 3
 activation: silu
+use_batchnorms: False
+use_lipschitz_norm: True
+lipschitz_loss_weight: 1e-6
 
 # training
 gpu: True
-n_gpus: 1
+n_gpus: 2
 n_points_per_cloud: 256
-bsz: 1024
+bsz: 3500
 lr: 1e-4
-n_epochs: 10000
+n_epochs: 10001
 n_warmup_epochs: 0
 
 # evaluation
