--- a/configs/config7.yaml
+++ b/configs/config7.yaml
@@ -11,10 +11,10 @@ z2_dim: 2
 r1_dim: 2
 encoder_hid_dim: 128
 decoder_hid_dim: 512
-encoder_n_layers: 3
-decoder_n_layers: 3
+encoder_n_resnet_blocks: 2
+decoder_n_resnet_blocks: 2
 activation: silu
-use_batchnorms: False
+use_batchnorms: True
 use_lipschitz_norm: True
 lipschitz_loss_weight: 1e-6
 
@@ -22,10 +22,10 @@ lipschitz_loss_weight: 1e-6
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
-bsz: 3500
-lr: 1e-4
+bsz: 1800
+lr: 1e-5
 n_epochs: 10001
-n_warmup_epochs: 0
+n_warmup_epochs: 30
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results/7
