--- a/configs/config7.yaml
+++ b/configs/config7.yaml
@@ -2,27 +2,25 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h1_dim: 2
-h2_dim: 2
+h_dim: 2
 e_dim: 64
 ze_dim: 64
-z1_dim: 2
-z2_dim: 2
-r1_dim: 2
+z_dim: 2
+n_latents: 3
 encoder_hid_dim: 128
 decoder_hid_dim: 512
 encoder_n_resnet_blocks: 2
 decoder_n_resnet_blocks: 2
 activation: silu
-use_batchnorms: True
-use_lipschitz_norm: True
+use_batchnorms: False
+use_lipschitz_norm: False
 lipschitz_loss_weight: 1e-6
 
 # training
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
-bsz: 1800
+bsz: 1024
 lr: 1e-5
 n_epochs: 10001
 n_warmup_epochs: 30
