--- a/configs/config6.yaml
+++ b/configs/config6.yaml
@@ -6,12 +6,13 @@ h_dim: 256
 e_dim: 256
 ze_dim: 256
 z_dim: 2
-n_latents: 6
+n_latents: 10
 encoder_hid_dim: 512
 decoder_hid_dim: 512
 encoder_n_resnet_blocks: 2
 decoder_n_resnet_blocks: 2
 activation: silu
+last_activation: null
 use_batchnorms: False
 use_lipschitz_norm: False
 lipschitz_loss_weight: 1e-6
@@ -20,10 +21,10 @@ lipschitz_loss_weight: 1e-6
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
-bsz: 140
+bsz: 80
 lr: 1e-5
 n_epochs: 50001
-n_warmup_epochs: 10
+n_warmup_epochs: 3
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results/6
