--- a/configs/config7.yaml
+++ b/configs/config7.yaml
@@ -6,24 +6,25 @@ h_dim: 256
 e_dim: 256
 ze_dim: 256
 z_dim: 2
-n_latents: 7
+n_latents: 14
 encoder_hid_dim: 512
 decoder_hid_dim: 512
 encoder_n_resnet_blocks: 2
 decoder_n_resnet_blocks: 2
 activation: silu
-use_batchnorms: False
+last_activation: null
+use_batchnorms: True
 use_lipschitz_norm: False
 lipschitz_loss_weight: 1e-6
 
 # training
 gpu: True
 n_gpus: 2
-n_points_per_cloud: 128
-bsz: 200
+n_points_per_cloud: 256
+bsz: 120
 lr: 1e-5
 n_epochs: 50001
-n_warmup_epochs: 10
+n_warmup_epochs: 1
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results/7
