--- a/configs/config_deepvae1.yaml
+++ b/configs/config_deepvae1.yaml
@@ -2,28 +2,20 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h_dim: 32
-e_dim: 32
-ze_dim: 32
+h_dim: 2
+e_dim: 16
+ze_dim: 16
 z_dim: 2
-n_latents: 3
+n_latents: 2
 hid_dim: 512
-# encoder_hid_dim: 512
-# decoder_hid_dim: 512
-# encoder_n_resnet_blocks: 2
-# decoder_n_resnet_blocks: 2
 activation: silu
-# last_activation: null
-# use_batchnorms: True
-# use_lipschitz_norm: False
-# lipschitz_loss_weight: 1e-6
 
 # training
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
 bsz: 400
-optimizer: adamw
+optimizer: adam
 lr: 1e-5
 n_epochs: 50001
 n_warmup_epochs: 30
