--- a/configs/config6.yaml
+++ b/configs/config6.yaml
@@ -2,11 +2,11 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h_dim: 256
-e_dim: 256
-ze_dim: 256
-z_dim: 2
-n_latents: 10
+h_dim: 64
+e_dim: 64
+ze_dim: 64
+z_dim: 64
+n_latents: 6
 encoder_hid_dim: 512
 decoder_hid_dim: 512
 encoder_n_resnet_blocks: 2
@@ -15,16 +15,18 @@ activation: silu
 last_activation: null
 use_batchnorms: False
 use_lipschitz_norm: False
-lipschitz_loss_weight: 1e-6
+lipschitz_loss_weight: 5e-6
+use_positional_encoding: True
+L: 20 # number of positional encodings
 
 # training
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
-bsz: 80
+bsz: 120
 lr: 1e-5
 n_epochs: 50001
-n_warmup_epochs: 3
+n_warmup_epochs: 10
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results/6
