--- a/configs/config7.yaml
+++ b/configs/config7.yaml
@@ -2,29 +2,31 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h_dim: 256
-e_dim: 256
-ze_dim: 256
-z_dim: 2
-n_latents: 14
+h_dim: 64
+e_dim: 64
+ze_dim: 64
+z_dim: 64
+n_latents: 6
 encoder_hid_dim: 512
 decoder_hid_dim: 512
 encoder_n_resnet_blocks: 2
 decoder_n_resnet_blocks: 2
 activation: silu
 last_activation: null
-use_batchnorms: True
+use_batchnorms: False
 use_lipschitz_norm: False
-lipschitz_loss_weight: 1e-6
+lipschitz_loss_weight: 5e-6
+use_positional_encoding: False
+L: 20 # number of positional encodings
 
 # training
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 256
-bsz: 120
+bsz: 400
 lr: 1e-5
 n_epochs: 50001
-n_warmup_epochs: 1
+n_warmup_epochs: 10
 
 # evaluation
 save_dir: /pio/scratch/1/mstyp/joint-clouds/results/7
