--- a/configs/config_deepvae0.yaml
+++ b/configs/config_deepvae0.yaml
@@ -2,25 +2,25 @@
 data_dir: /pio/scratch/1/mstyp/joint-clouds/data
 
 # model
-h_dim: 2
-e_dim: 16
-ze_dim: 16
-z_dim: 32
-n_latents: 4
+h_dim: 32
+e_dim: 32
+ze_dim: 32
+z_dim: 2
+n_latents: 6
 hid_dim: 512
 activation: silu
-use_positional_encoding: True
+use_positional_encoding: False
 L: 20 # number of positional encodings
 
 # training
 gpu: True
 n_gpus: 2
 n_points_per_cloud: 512
-bsz: 400
+bsz: 300
 optimizer: adam
 lr: 5e-6
 n_epochs: 50001
-n_warmup_epochs: 30
+n_warmup_epochs: 10
 beta: 1e3
 
 # evaluation
